tests/baselines/reference/parserES5ForOfStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement1.d.ts(1,1): error TS9003: 'for...of' statements are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement1.d.ts (1 errors) ====
    for (var i of e) {
    ~~~
!!! error TS9003: 'for...of' statements are not currently supported.
    }